Fix word-break in tables
FossilOrigin-Name: 98d4fc8605ac486fc909b9896defa54629520c69

--- a/web/content.css
+++ b/web/content.css
@@ -9,7 +9,7 @@
     content: attr(data-a) "\0040" attr(data-b) "." attr(data-c);
 }
 
-.web-content {
+.web-content p {
     overflow-wrap: break-word;
     word-wrap: break-word;
 
